--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -16,7 +16,12 @@ dependencies:
     sdk: flutter
 
   flutter_riverpod: ^0.14.0+3
+  freezed_annotation: ^0.14.1
 
+  # network
+  dio: ^4.0.0
+
+  # localDB
   hive: ^2.0.4
   hive_flutter: ^1.0.0
   shared_preferences: ^2.0.4
@@ -27,7 +32,10 @@ dev_dependencies:
   flutter_test:
     sdk: flutter
 
+  freezed: ^0.14.1+3
+  json_serializable: ^4.1.1
   hive_generator: ^1.1.0
+
   pedantic: ^1.11.0
   build_runner: ^2.0.1
 
