--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -15,6 +15,7 @@ dependencies:
   flutter_localizations:
     sdk: flutter
 
+  lifecycle: ^0.2.0
   flutter_riverpod: ^0.14.0+3
   freezed_annotation: ^0.14.1
 
@@ -26,6 +27,7 @@ dependencies:
   hive_flutter: ^1.0.0
   shared_preferences: ^2.0.4
 
+  intl: ^0.17.0
   logger: ^1.0.0
 
 dev_dependencies:
