--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -34,12 +34,37 @@ dev_dependencies:
   flutter_test:
     sdk: flutter
 
+  flutter_flavorizr: ^2.0.0
+
   freezed: ^0.14.1+3
   json_serializable: ^4.1.1
   hive_generator: ^1.1.0
 
   pedantic: ^1.11.0
   build_runner: ^2.0.1
+
+flavorizr:
+  app:
+    android:
+      flavorDimensions: 'flavor-type'
+    ios:
+
+  flavors:
+    coffee:
+      app:
+        name: 'コーヒー'
+      android:
+        applicationId: 'jp.hotdrop.mybt.coffee'
+      ios:
+        bundleId: 'jp.hotdrop.mybt.coffee'
+
+    tea:
+      app:
+        name: '紅茶'
+      android:
+        applicationId: 'jp.hotdrop.mybt.tea'
+      ios:
+        bundleId: 'jp.hotdrop.mybt.tea'
 
 flutter:
   uses-material-design: true
