--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -35,6 +35,7 @@ dev_dependencies:
     sdk: flutter
 
   flutter_flavorizr: ^2.0.0
+  flutter_launcher_icons: ^0.9.0
 
   freezed: ^0.14.1+3
   json_serializable: ^4.1.1
@@ -69,7 +70,6 @@ flavorizr:
 flutter:
   uses-material-design: true
 
-  # To add assets to your application, add an assets section, like this:
   assets:
     - assets/app_coffee_images/
     - assets/app_tea_images/
