アプリの説明を修正

--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -1,5 +1,5 @@
 name: mybt
-description: my blue print app.
+description: An app that considers the design of an app created with Flutter.
 
 publish_to: 'none'
 
