--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -3,10 +3,10 @@ description: An app that considers the design of an app created with Flutter.
 
 publish_to: 'none'
 
-version: 2.1.0+2
+version: 2.2.0+3
 
 environment:
-  sdk: '>=2.12.0 <3.0.0'
+  sdk: '>=2.17.1 <3.0.0'
 
 dependencies:
   flutter:
@@ -16,15 +16,14 @@ dependencies:
 
   lifecycle: ^0.4.3
   flutter_riverpod: ^1.0.0
-  freezed_annotation: ^1.1.0
+  freezed_annotation: ^2.2.0
+  json_annotation: ^4.7.0
 
-  # network
   dio: ^4.0.6
 
-  # localDB
-  hive: ^2.1.0
+  hive: ^2.2.3
   hive_flutter: ^1.1.0
-  shared_preferences: ^2.0.13
+  shared_preferences: ^2.0.15
 
   intl: ^0.17.0
   logger: ^1.1.0
@@ -36,8 +35,8 @@ dev_dependencies:
   flutter_flavorizr: ^2.1.2
   flutter_launcher_icons: ^0.9.2
 
-  freezed: ^1.1.0
-  json_serializable: ^6.1.4
+  freezed: ^2.2.0
+  json_serializable: ^6.5.1
   hive_generator: ^1.1.0
   build_runner: ^2.0.1
 
