--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -7,6 +7,7 @@ version: 2.2.0+3
 
 environment:
   sdk: '>=2.17.1 <3.0.0'
+  flutter: ">=3.0.0"
 
 dependencies:
   flutter:
@@ -14,8 +15,10 @@ dependencies:
   flutter_localizations:
     sdk: flutter
 
+  flutter_riverpod: ^2.0.2
+  riverpod_annotation: ^1.0.4
+
   lifecycle: ^0.6.0
-  flutter_riverpod: ^1.0.0
   freezed_annotation: ^2.2.0
   json_annotation: ^4.7.0
 
@@ -35,6 +38,7 @@ dev_dependencies:
   flutter_flavorizr: ^2.1.2
   flutter_launcher_icons: ^0.9.2
 
+  riverpod_generator: ^1.0.4
   freezed: ^2.2.0
   json_serializable: ^6.5.1
   hive_generator: ^1.1.0
